--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
 .orange {
     color: orange;
 }
+
+.half-width {
+    width: 50%;
+    padding-left: 3%;
+    padding-top: 5%;
+}
+
+.half-width img {
+    width: 80%;
+
+}
+
+#about-us {
+    padding-top: 13%;
+}
+
+.flexible-cont {
+    display: flex;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+.link-button {
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    color: white;
+    font-weight: 600;
+    padding: 10px 40px;
+    border-radius: 5px;
+}
